Updated phishing-related HTML pages and data.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,11 +45,11 @@
               >Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../scrollytelly/data.html">Discover</a>
+            <a class="nav-link" href="../scrollytelly/data.html">Trending Scams</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Trending Scams
+              Discover
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
@@ -65,11 +65,11 @@
   <!-- Landing Section -->
   <section class="landing-section text-center">
     <div class="container">
-      <h1 class="intro-title">Are you sure it's not a scam?</h1>
+      <h1 class="intro-title">Protect Yourself from Scams </br> Know the Warning Signs<br></h1>
       <p class="intro-body">
-        We can help you identify the most prevalent scams among elderly in Australia
+        We’re here to help you in recognise common scams targeting senior Australians and how to stay safe online.
       </p>
-      <a class="btn-blue" href="../scrollytelly/data.html" role="button">Check our latest trends</a>
+      <a class="btn-blue" href="../scrollytelly/data.html" role="button">Explore </a>
     </div>
   </section>
 
@@ -85,7 +85,7 @@
 
   <!-- Trending Scams Section -->
   <section class="trending-scams-section text-center" id="trending-scams">
-    <h2 class="display-5">Most common scam types among the elderly</h2>
+    <h2 class="display-5">Most common types of scams among senior Australians</h2>
 
     <div class="card-container">
 			<div class="card">
@@ -134,7 +134,7 @@
 
   <!-- Check out Section -->
   <section class="what-to-do-section text-center">
-    <h3><a class="check-out-link" href="https://www.scamwatch.gov.au/" target="_blank">Check out the <b>official website</b> for more information</a></h3>
+    <h3><a class="check-out-link" href="https://www.scamwatch.gov.au/" target="_blank">Spot the red flags: unsolicited offers, requests for money, and unfamiliar phone numbers.</a></h3>
   </section>
 
   <!-- Footer -->
@@ -156,7 +156,7 @@
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Discover</a></li>
+            <li><a href="#">Trending Scams</a></li>
           </ul>
         </div>
       </div>
