--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -50,11 +50,11 @@
                       >Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../scrollytelly/data.html">Discover</a>
+                    <a class="nav-link" href="../scrollytelly/data.html">Trending Scams</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Trending Scams
+                      Discover
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
@@ -121,7 +121,7 @@
                 <h5>Quick Links</h5>
                 <ul class="list-unstyled">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Discover</a></li>
+                    <li><a href="#">Trending Scams</a></li>
                 </ul>
                 </div>
             </div>
