--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -91,11 +91,11 @@
                 >Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Discover</a>
+              <a class="nav-link" href="#">Trending Scams</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Trending Scams
+                Discover
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="../frontend/clonePhishing.html">Clone Phishing</a>
@@ -233,7 +233,7 @@
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
             <li><a href="../frontend/index.html">Home</a></li>
-            <li><a href="#">Discover</a></li>
+            <li><a href="#">Trending Scams</a></li>
           </ul>
         </div>
       </div>
