call to action wording

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,7 +69,7 @@
       <p class="intro-body">
         We’re here to help you in recognise common scams targeting senior Australians and how to stay safe online.
       </p>
-      <a class="btn-blue" href="../scrollytelly/data.html" role="button">Explore </a>
+      <a class="btn-blue" href="../scrollytelly/data.html" role="button">Explore how senior Australians are being targetted</a>
     </div>
   </section>
 
