--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -1,77 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Senior Safe</title>
-    <link href="styles.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
-
-    <!-- Scripts -->
-    <script src="https://d3js.org/d3.v6.min.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Latest Scam Trends - Senior Safe</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
-    <script src="js/scroller.js"></script>
-    <script src="js/selection.js"></script>
-
-    <style>
-      /* Existing CSS */
-      .quotes-section {
-        background-color: #333;
-        padding: 40px 0;
-        color: white;
-      }
-
-      .quote-text {
-        font-size: 24px;
-        font-style: italic;
-        max-width: 1000px;
-        margin: 0 auto;
-        line-height: 1.5;
-        min-height: 60px;
-        opacity: 0;
-        transition: opacity 1s ease-in-out;
-      }
-
-      .quote-text.visible {
-        opacity: 1;
-      }
-
-      .gold-btn {
-        background-color: gold;
-        color: black;
-        border: none;
-        padding: 10px 20px;
-        font-size: 18px;
-        cursor: pointer;
-      }
-
-      .gold-btn:hover {
-        background-color: darkgoldenrod;
-      }
-    </style>
-  </head>
-
-  <body>
+</head>
+<body>
+    <!-- Replaced Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img
-            src="resources/logof.jpg"
-            alt="Senior Safe Logo"
-            class="logo"
-          />Senior Safe
+          <img src="resources/logof.jpg" alt="Senior Safe Logo" class="logo"/>Senior Safe
         </a>
         <button
           class="navbar-toggler"
@@ -108,138 +54,167 @@
       </div>
     </nav>
 
-    <!-- ------------ Data Visualisation Section -------------- -->
-    <div class="top-center">
-      <div class="title"></div>
-      The rise in scams targeting senior Australians is a call to action. By
-      increasing awareness, enhancing digital literacy, and implementing
-      stronger safeguards, we can help protect our elderly from falling victim
-      to these ruthless crimes.
-      <br /><br />
-      Discover how scams are increasingly targeting Australians aged 65 and
-      over.
-      <br /><br />
-      <div class="title">Scroll to Start</div>
-    </div>
-    <div class="scroll-container">
-      <div id="graphic">
-        <div id="sections">
-          <section class="step">
-            <div class="title">Scam Trends Among Senior Australians</div>
-            From January 2020 to June 2024, over 120,000 scams targeting senior
-            Australians have been reported.
-            <br /><br />
-            During this period, the frequency of reported scams has increased
-            significantly year over year, reflecting the growing sophistication
-            and adaptability of scammers. These malicious actors continually
-            devise new tactics to exploit the vulnerabilities of older
-            Australians, preying on their trust and often limited familiarity
-            with digital technologies.
-            <br /><br />
-            The escalating trend in scam reports underscores the urgent need for
-            heightened awareness, education, and protective measures to
-            safeguard our senior population from these evolving threats.
-          </section>
-          <section class="step">
-            <div class="title">Rising Scam Incidents</div>
-            Over the past few years, scammers have been increasingly preying on
-            the elderly, with reports of scams involving Australians aged 65 and
-            over surging. This growing trend highlights the need for greater
-            awareness and education among seniors to protect themselves from
-            these malicious activities.
-          </section>
-          <section class="step">
-            <div class="title">Dominance of Phishing Scams</div>
-            Among the various types of scams, phishing stands out as the most
-            prevalent threat to senior Australians. These scams, which cunningly
-            mimic legitimate communications to steal personal information, have
-            caused significant distress and financial losses among the elderly.
-          </section>
-          <section class="step">
-            <div class="title">
-              Email and Mobile as the Primary Contact Mode
+    <main>
+        <section class="landing-section2 text-center">
+            <div class="container">
+                <h1 class="display-4">How are Senior Australians being targeted by Scammers?</h1>
+                <p class="lead">
+                    The rise in scams targeting senior Australians is a call to action. By
+                    increasing awareness, enhancing digital literacy, and implementing
+                    stronger safeguards, we can help protect our elderly from falling victim
+                    to these ruthless crimes.
+                    <br /><br />
+                    Discover how scams are increasingly targeting Australians aged 65 and
+                    over.
+                    <div class="title">Scroll to Start</div>
+                </p>
             </div>
-            In an era where everyone has an email address and mobile, scammers
-            have increasingly turned to emails, phone calls and text messages as
-            their weapons of choice. For seniors, a simple email or text can
-            lead to devastating financial losses, as these messages often appear
-            harmless but are designed to deceive.
-          </section>
-          <section class="step">
-            <div class="title">
-              Geographical Concentration in Certain States
-            </div>
-            While no part of Australia is immune to scams, certain states like
-            New South Wales, Victoria, and Queensland have emerged as hotspots
-            for fraudulent activities targeting seniors. This geographical
-            disparity is likely linked to specific states having higher
-            populations and commercial activity.
-          </section>
-          <section class="step">
-            <div class="title">Gender Differences in Scam Victimisation</div>
-            When it comes to targetted scams, gender plays a role in the
-            experience of senior Australians. Men, in particular, have been
-            found to be targetted more significantly in certain types of scams,
-            highlighting a need for awareness campaigns that address the
-            specific risks faced by each gender.
-          </section>
-          <section class="step">
-            <div class="title">High Financial Impact of Scams</div>
-            For many seniors, the financial impact of falling victim to a scam
-            can be devastating, wiping out savings and causing long-term
-            financial insecurity. The sheer magnitude of the losses reported
-            highlights the ruthless nature of these scams and the urgent need
-            for protective measures. In over 300 reported cases, senior
-            Australians have lost over $1 million.
-          </section>
-          <section class="step">
-            <div class="title">Seasonal Trends in Scam Reports</div>
-            Scammers don't take a holiday—if anything, their efforts stay
-            consistent year round. Senior Australians need to consistently be
-            cautious, as any day can quickly turn into despair with just one
-            wrong click.
-          </section>
-          <section class="step">
-            <div class="title">The Role of Awareness and Reporting</div>
-            As awareness about scams grows, so too does the number of reported
-            incidents. The data likely represents just the tip of the iceberg,
-            as many seniors may not report scams due to shame, embarrassment, or
-            simply not realising they've been scammed.
-          </section>
-        </div>
-        <div id="vis">
-          <!-- The visualization will be rendered here by D3.js -->
-        </div>
-        <div id="extra-space"></div>
-      </div>
-    </div>
+        </section>
 
-    <!-- Footer -->
-  <footer class="footer bg-light text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h5>Contact Us</h5>
-          <p>Email: <a href="mailto:info@seniorsafe.com">info@seniorsafe.com</a></p>
-          <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+        <div class="scroll-container">
+            <div id="graphic">
+                <div id="sections">
+                    <section class="step">
+                        <div class="title">Scam Trends Among Senior Australians</div>
+                        From January 2020 to June 2024, over 120,000 scams targeting senior
+                        Australians have been reported.
+                        <br /><br />
+                        During this period, the frequency of reported scams has increased
+                        significantly year over year, reflecting the growing sophistication
+                        and adaptability of scammers. These malicious actors continually
+                        devise new tactics to exploit the vulnerabilities of older
+                        Australians, preying on their trust and often limited familiarity
+                        with digital technologies.
+                        <br /><br />
+                        The escalating trend in scam reports underscores the urgent need for
+                        heightened awareness, education, and protective measures to
+                        safeguard our senior population from these evolving threats.
+                    </section>
+                    <section class="step">
+                        <div class="title">Rising Scam Incidents</div>
+                        Over the past few years, scammers have been increasingly preying on
+                        the elderly, with reports of scams involving Australians aged 65 and
+                        over surging. This growing trend highlights the need for greater
+                        awareness and education among seniors to protect themselves from
+                        these malicious activities.
+                    </section>
+                    <section class="step">
+                        <div class="title">Dominance of Phishing Scams</div>
+                        Among the various types of scams, phishing stands out as the most
+                        prevalent threat to senior Australians. These scams, which cunningly
+                        mimic legitimate communications to steal personal information, have
+                        caused significant distress and financial losses among the elderly.
+                    </section>
+                    <section class="step">
+                        <div class="title">
+                            Email and Mobile as the Primary Contact Mode
+                        </div>
+                        In an era where everyone has an email address and mobile, scammers
+                        have increasingly turned to emails, phone calls and text messages as
+                        their weapons of choice. For seniors, a simple email or text can
+                        lead to devastating financial losses, as these messages often appear
+                        harmless but are designed to deceive.
+                    </section>
+                    <section class="step">
+                        <div class="title">
+                            Geographical Concentration in Certain States
+                        </div>
+                        While no part of Australia is immune to scams, certain states like
+                        New South Wales, Victoria, and Queensland have emerged as hotspots
+                        for fraudulent activities targeting seniors. This geographical
+                        disparity is likely linked to specific states having higher
+                        populations and commercial activity.
+                    </section>
+                    <section class="step">
+                        <div class="title">Gender Differences in Scam Victimisation</div>
+                        When it comes to targeted scams, gender plays a role in the
+                        experience of senior Australians. Men, in particular, have been
+                        found to be targeted more significantly in certain types of scams,
+                        highlighting a need for awareness campaigns that address the
+                        specific risks faced by each gender.
+                    </section>
+                    <section class="step">
+                        <div class="title">High Financial Impact of Scams</div>
+                        For many seniors, the financial impact of falling victim to a scam
+                        can be devastating, wiping out savings and causing long-term
+                        financial insecurity. The sheer magnitude of the losses reported
+                        highlights the ruthless nature of these scams and the urgent need
+                        for protective measures. In over 300 reported cases, senior
+                        Australians have lost over $1 million.
+                    </section>
+                    <section class="step">
+                        <div class="title">Seasonal Trends in Scam Reports</div>
+                        Scammers don't take a holiday—if anything, their efforts stay
+                        consistent year round. Senior Australians need to consistently be
+                        cautious, as any day can quickly turn into despair with just one
+                        wrong click.
+                    </section>
+                    <section class="step">
+                        <div class="title">The Role of Awareness and Reporting</div>
+                        As awareness about scams grows, so too does the number of reported
+                        incidents. The data likely represents just the tip of the iceberg,
+                        as many seniors may not report scams due to shame, embarrassment, or
+                        simply not realizing they've been scammed.
+                    </section>
+                </div>
+                <div id="vis">
+                    <!-- The visualization will be rendered here by D3.js -->
+                </div>
+                <div id="extra-space"></div>
+            </div>
         </div>
-        <div class="col-md-4">
-          <h5>Follow Us</h5>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
+    </main>
+
+    <footer class="footer bg-light text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h5>Contact Us</h5>
+            <p>
+              Email:
+              <a href="mailto:info@seniorsafe.com">info@seniorsafe.com</a>
+            </p>
+            <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+          </div>
+          <div class="col-md-4">
+            <h5>Follow Us</h5>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+          <div class="col-md-4">
+            <h5>Quick Links</h5>
+            <ul class="list-unstyled">
+              <li><a href="../frontend/index.html">Home</a></li>
+              <li><a href="#">Trending Scams</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="col-md-4">
-          <h5>Quick Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="../frontend/index.html">Home</a></li>
-            <li><a href="#">Trending Scams</a></li>
-          </ul>
-        </div>
+        <hr />
+        <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
       </div>
-      <hr />
-      <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
-    </div>
-  </footer>
-  </body>
+    </footer>
+
+    <script src="js/scroller.js"></script>
+    <script src="js/selection.js"></script>
+    <script>
+        // Initialize the visualization after the DOM is fully loaded
+        document.addEventListener('DOMContentLoaded', function() {
+            const visualization = scrollVis();  // Initialize visualization
+            const scrollerInstance = scroller();  // Initialize scroller
+
+            // Connect the visualization to the scroller
+            scrollerInstance.dispatch.on('active', function(index) {
+                visualization.update(index, 0);
+            });
+
+            scrollerInstance.dispatch.on('progress', function(progress) {
+                visualization.update(scrollerInstance.currentIndex, progress);
+            });
+
+            // Trigger the visualization display function from selection.js
+            display();  
+        });
+    </script>
+</body>
 </html>
