added the navisation buttons on scam pages for better usability

--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -102,6 +102,11 @@
             </div>
         </section>
 
+        <!-- Add a navigation button to the next scam page -->
+        <div class="btn-container">
+          <button class="button-22" id="clonePhishingnextBtn">Go to the Next Scam Page</button>
+        </div>
+
         <!-- Footer -->
         <footer class="footer bg-light text-center">
             <div class="container">
@@ -129,6 +134,12 @@
             <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
             </div>
         </footer>
+
+        <script>
+          document.getElementById('clonePhishingnextBtn').addEventListener('click', function() {
+            window.location.href = 'smishingPhishing.html';
+          });
+        </script>
     </body>
 
 </html>
