--- a/frontend/smishingPhishing.html
+++ b/frontend/smishingPhishing.html
@@ -105,6 +105,11 @@
             </div>
         </section>
 
+        <!-- Add a navigation button to the next scam page -->
+        <div class="btn-container">
+          <button class="button-22" id="smishingPhishingNextBtn">Go to the Next Scam Page</button>
+        </div>
+
         <!-- Footer -->
         <footer class="footer bg-light text-center">
             <div class="container">
@@ -132,6 +137,13 @@
             <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
             </div>
         </footer>
+
+        <script>
+          document.getElementById('smishingPhishingNextBtn').addEventListener('click', function() {
+            window.location.href = 'voicePhishing.html';
+          });
+        </script>
+
     </body>
 
 </html>
