fixed navigation link on footer

--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -104,7 +104,7 @@
 
         <!-- Add a navigation button to the next scam page -->
         <div class="btn-container">
-          <button class="button-22" id="clonePhishingnextBtn">Go to the Next Scam Page</button>
+          <button class="button-22" id="clonePhishingNextBtn">Go to the Next Scam Page</button>
         </div>
 
         <!-- Footer -->
@@ -126,7 +126,7 @@
                 <h5>Quick Links</h5>
                 <ul class="list-unstyled">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Trending Scams</a></li>
+                    <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
                 </ul>
                 </div>
             </div>
@@ -136,7 +136,7 @@
         </footer>
 
         <script>
-          document.getElementById('clonePhishingnextBtn').addEventListener('click', function() {
+          document.getElementById('clonePhishingNextBtn').addEventListener('click', function() {
             window.location.href = 'smishingPhishing.html';
           });
         </script>
