--- a/frontend/index.html
+++ b/frontend/index.html
@@ -156,7 +156,7 @@
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Trending Scams</a></li>
+            <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
           </ul>
         </div>
       </div>
