--- a/frontend/voicePhishing.html
+++ b/frontend/voicePhishing.html
@@ -129,7 +129,7 @@
                 <h5>Quick Links</h5>
                 <ul class="list-unstyled">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Trending Scams</a></li>
+                    <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
                 </ul>
                 </div>
             </div>
