--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -60,6 +60,10 @@
                       <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
                       <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
                       <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
+                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
+                      <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
+                      <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
+                      <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
                     </div>
                   </li>
                 </ul>
