--- a/frontend/voicePhishing.html
+++ b/frontend/voicePhishing.html
@@ -61,6 +61,10 @@
                       <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
                       <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
                       <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
+                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
+                      <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
+                      <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
+                      <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
                     </div>
                   </li>
                 </ul>
@@ -140,7 +144,7 @@
 
         <script>
           document.getElementById('voicePhishingNextBtn').addEventListener('click', function() {
-            window.location.href = 'voicePhishing.html';
+            window.location.href = 'spearPhishing.html';
           });
         </script>
 
