--- a/frontend/searchEnginePhishing.html
+++ b/frontend/searchEnginePhishing.html
@@ -72,28 +72,25 @@
             </div>
         </nav>
 
-        <!-- Reference: all the text contents come from https://www.kaspersky.com/resource-center/threats/what-is-smishing-and-how-to-defend-against-it -->
+        <!-- Reference: all the text contents come from https://cheapsslsecurity.com/blog/what-is-voice-phishing-vishing-definition-meaning/ -->
         <section class="scam-introduction-section">
-            <h1>Smishing (SMS Phishing)</h1>
-            <p>Smishing is a type of scam that happens through text messages on your phone. 
-                Scammers try to trick you into giving personal information, like passwords or bank details. 
-                Sometimes they use fake websites or bad apps to help with their scam. 
-                This can happen on regular text messages or other messaging apps you use on your phone.</p>
-            <p>
-                Usually, they'll try to get you to click on a malicious link, download malware, or provide sensitive information like passwords or credit card numbers.</p>
-            </p>
+            <h1>Search Engine Phishing</h1>
+            <p>A search engine phishing attack involves an attacker making fake products that look attractive. 
+              When these pop up in a search engine, the target is asked to enter sensitive information before purchasing, which then goes to a hacker.</p>
         </section>
 
         <section class="scam-real-life-examples-section">
             <div class="content">
                 <h2>Real-Life Examples</h2>
                 <p>
-                    A more common smishing attack uses brand names with purported links to the brand’s site. 
-                    Usually, an attacker tells the user that they’ve won money or provides a malicious link for tracking packages
+                  Search for a popular website, such as Amazon.com, on a search engine and click on one of the top results. 
+                  However, instead of being directed to the legitimate website, 
+                  you're taken to a convincing but fake version (something like Am@zon.com) designed to mimic the original site.
                 </p>
             </div>
             <div class="image-container">
-                <img class="smishing-example" src="./assets/smishing.jpg" alt="Real-life example illustration" />
+                <!-- Image Reference: https://www.keepersecurity.com/blog/2023/04/12/what-is-search-engine-phishing/ -->
+                <img src="./assets/searchEnginePhishing.jpg" alt="Real-life example illustration" />
             </div>
         </section>
 
@@ -101,18 +98,13 @@
             <h2>How to Prevent</h2>
             <div class="list-container">
                 <ol class="gradient-list">
-                    <li>Even replying with “STOP” can let scammers know your number is active. Just ignore the message.</li>
-                    <li>If a message seems urgent, be cautious—it could be a scam. Take your time before doing anything.</li>
-                    <li>If you're unsure, call your bank or company directly using official contact info. They don’t ask for personal details over text.</li>
-                    <li>Don’t use any links or phone numbers from suspicious texts. Always go to the company’s official website or contact line.</li>
+                  <li>Before clicking on a search result, look carefully at the website address to make sure it looks correct and doesn’t have strange spellings.</li>
+                  <li>Stick to well-known search engines like Google or Bing, which are better at blocking fake websites.</li>
+                  <li>Make sure the website has “https” at the start of its address and a padlock symbol before entering any personal information.</li>
+                  <li>Use browser tools or extensions that can warn you about unsafe websites.</li>
                 </ol>
             </div>
         </section>
-
-        <!-- Add a navigation button to the next scam page -->
-        <div class="btn-container">
-          <button class="button-22" id="smishingPhishingNextBtn">Go to the Next Scam Page</button>
-        </div>
 
         <!-- Footer -->
         <footer class="footer bg-light text-center">
@@ -141,13 +133,6 @@
             <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
             </div>
         </footer>
-
-        <script>
-          document.getElementById('smishingPhishingNextBtn').addEventListener('click', function() {
-            window.location.href = 'voicePhishing.html';
-          });
-        </script>
-
     </body>
 
 </html>
