--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -57,13 +57,13 @@
                       Discover
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
                       <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
+                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
                       <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
                       <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
+                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
+                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
+                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
                     </div>
                   </li>
                 </ul>
@@ -108,7 +108,7 @@
 
         <!-- Add a navigation button to the next scam page -->
         <div class="btn-container">
-          <button class="button-22" id="clonePhishingNextBtn">Go to the Next Scam Page</button>
+          <button class="button-22" id="clonePhishingNextBtn">Go to the Next Scam Page (Pop-up Phishing)</button>
         </div>
 
         <!-- Footer -->
@@ -141,7 +141,7 @@
 
         <script>
           document.getElementById('clonePhishingNextBtn').addEventListener('click', function() {
-            window.location.href = 'smishingPhishing.html';
+            window.location.href = 'popupPhishing.html';
           });
         </script>
     </body>
