--- a/frontend/popupPhishing.html
+++ b/frontend/popupPhishing.html
@@ -58,13 +58,13 @@
                       Discover
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
                       <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
+                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
                       <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
                       <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
+                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
+                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
+                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
                     </div>
                   </li>
                 </ul>
@@ -108,7 +108,7 @@
 
         <!-- Add a navigation button to the next scam page -->
         <div class="btn-container">
-          <button class="button-22" id="popupPhishingNextBtn">Go to the Next Scam Page</button>
+          <button class="button-22" id="popupPhishingNextBtn">Go to the Next Scam Page (Search Engine Phishing)</button>
         </div>
 
         <!-- Footer -->
