--- a/frontend/searchEnginePhishing.html
+++ b/frontend/searchEnginePhishing.html
@@ -58,13 +58,13 @@
                       Discover
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
                       <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
+                      <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
                       <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
                       <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
+                      <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
+                      <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
+                      <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
                     </div>
                   </li>
                 </ul>
@@ -106,6 +106,11 @@
             </div>
         </section>
 
+        <!-- Add a navigation button to the next scam page -->
+        <div class="btn-container">
+          <button class="button-22" id="searchEnginePhishingNextBtn">Go to the Next Scam Page (Smishing)</button>
+        </div>
+
         <!-- Footer -->
         <footer class="footer bg-light text-center">
             <div class="container">
@@ -133,6 +138,13 @@
             <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
             </div>
         </footer>
+
+        <script>
+          document.getElementById('searchEnginePhishingNextBtn').addEventListener('click', function() {
+            window.location.href = 'smishingPhishing.html';
+          });
+        </script>
+
     </body>
 
 </html>
