added all the links to scam page in data insight page

--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -44,8 +44,12 @@
                 Discover
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="../frontend/businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
                 <a class="dropdown-item" href="../frontend/clonePhishing.html">Clone Phishing</a>
+                <a class="dropdown-item" href="../frontend/popupPhishing.html">Pop-up Phishing</a>
+                <a class="dropdown-item" href="../frontend/searchEnginePhishing.html">Search Engine Phishing</a>
                 <a class="dropdown-item" href="../frontend/smishingPhishing.html">Smishing</a>
+                <a class="dropdown-item" href="../frontend/spearPhishing.html">Spear Phishing</a>
                 <a class="dropdown-item" href="../frontend/voicePhishing.html">Voice Phishing</a>
               </div>
             </li>
