added quick links in the home page

--- a/frontend/businessEmailCompromisePhishing.html
+++ b/frontend/businessEmailCompromisePhishing.html
@@ -91,7 +91,7 @@
             </div>
             <div class="image-container">
                 <!-- Image Reference: https://www.mailguard.com.au/blog/whaling-ceo-fraud-business-email-compromise-targeted-spear-phishing-attacks-continue-to-trouble-businesses -->
-                <img src="./assets/BECsmall.jpg" alt="Real-life example illustration" />
+                <img src="./assets/BEC.jpg" alt="Real-life example illustration" />
             </div>
         </section>
 
