--- a/frontend/popupPhishing.html
+++ b/frontend/popupPhishing.html
@@ -90,7 +90,7 @@
             </div>
             <div class="image-container">
                 <!-- Image Reference: https://support.intego.com/hc/en-us/articles/207113578-About-the-Web-Browser-Pop-up-Alert-Scam/ -->
-                <img src="./assets/popupPhishingSmall.jpg" alt="Real-life example illustration" />
+                <img src="./assets/popupPhishing.jpg" alt="Real-life example illustration" />
             </div>
         </section>
 
