--- a/frontend/spearPhishing.html
+++ b/frontend/spearPhishing.html
@@ -96,7 +96,7 @@
             </div>
             <div class="image-container">
                 <!-- Image Reference: https://www.tessian.com/blog/5-real-world-examples-of-phishing-attacks/ -->
-                <img src="./assets/spearPhishingSmall.jpg" alt="Real-life example illustration" />
+                <img src="./assets/spearPhishing.jpg" alt="Real-life example illustration" />
             </div>
         </section>
 
