--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,7 +91,23 @@
   <section class="trending-scams-section text-center" id="trending-scams">
     <h2 class="display-5">Most common types of scams among senior Australians</h2>
 
+    
     <div class="card-container">
+      
+      <div class="card">
+				<div class="content">
+					<div class="imgBx">
+            <!-- Ref: https://www.freepik.com/free-vector/phishing-account-concept_7970700.htm#fromView=search&page=1&position=0&uuid=ce32faa2-7d63-4e02-9250-66a584a7cfaf -->
+						<img src="./assets/BECSmall.jpg">
+					</div>
+          <br>
+					<div class="contentBx">
+						<h3>Business Email Compromise Phishing</h3>
+					</div>
+        </div>
+        <a href="businessEmailCompromisePhishing.html"> Learn More </a>
+			</div>
+
 			<div class="card">
 				<div class="content">
 					<div class="imgBx">
@@ -109,6 +125,34 @@
       <div class="card">
 				<div class="content">
 					<div class="imgBx">
+            <!-- Ref: https://www.freepik.com/free-vector/illustration-virus-detection_3207974.htm#fromView=search&page=1&position=0&uuid=e1dcaac7-37f1-4d29-bc81-b8ea0a1e1bdc -->
+						<img src="./assets/popupPhishingSmall.jpg">
+					</div>
+          <br>
+					<div class="contentBx">
+						<h3>Pop-up Phishing</h3>
+					</div>
+        </div>
+        <a href="popupPhishing.html"> Learn More </a>
+			</div>
+
+      <div class="card">
+				<div class="content">
+					<div class="imgBx">
+            <!-- Ref: https://www.freepik.com/free-photo/laptop-with-fake-news-magnifying-glass_12225930.htm#fromView=search&page=1&position=2&uuid=dbeccb18-5509-4a9f-ba61-ec851d436aeb -->
+						<img src="./assets/searchEnginePhishingSmall.jpg">
+					</div>
+          <br>
+					<div class="contentBx">
+						<h3>Search Engine Phishing</h3>
+					</div>
+        </div>
+        <a href="searchEnginePhishing.html"> Learn More </a>
+			</div>
+
+      <div class="card">
+				<div class="content">
+					<div class="imgBx">
             <!-- Ref: https://www.freepik.com/free-vector/phishing-account-concept_8088554.htm#fromView=search&page=1&position=5&uuid=a6530a06-bff5-44c7-ae7e-2c0adc835ef9 -->
 						<img src="./assets/SMSPhishingSmall.jpg">
 					</div>
@@ -118,6 +162,20 @@
 					</div>
         </div>
         <a href="smishingPhishing.html"> Learn More </a>
+			</div>
+
+      <div class="card">
+				<div class="content">
+					<div class="imgBx">
+            <!-- Ref: https://www.freepik.com/free-vector/mobile-phishing-landing-page_8247268.htm#fromView=search&page=1&position=0&uuid=b3b894e6-b886-40c1-8440-cc918d0fc6ed -->
+						<img src="./assets/spearPhishingSmall.jpg">
+					</div>
+          <br>
+					<div class="contentBx">
+						<h3>Spear Phishing</h3>
+					</div>
+        </div>
+        <a href="spearPhishing.html"> Learn More </a>
 			</div>
 
       <div class="card">
