modified the cards to link to different web pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,15 +97,15 @@
       <div class="card">
 				<div class="content">
 					<div class="imgBx">
-            <!-- Ref: https://www.freepik.com/free-vector/phishing-account-concept_7970700.htm#fromView=search&page=1&position=0&uuid=ce32faa2-7d63-4e02-9250-66a584a7cfaf -->
-						<img src="./assets/BECSmall.jpg">
+            <!-- Ref: https://www.freepik.com/free-vector/phishing-account-concept_8088554.htm#fromView=search&page=1&position=5&uuid=a6530a06-bff5-44c7-ae7e-2c0adc835ef9 -->
+						<img src="./assets/SMSPhishingSmall.jpg">
 					</div>
           <br>
 					<div class="contentBx">
-						<h3>Business Email Compromise Phishing</h3>
+						<h3>Trending Scam</h3>
 					</div>
         </div>
-        <a href="businessEmailCompromisePhishing.html"> Learn More </a>
+        <a href=""> Discover More </a>
 			</div>
 
 			<div class="card">
@@ -116,10 +116,10 @@
 					</div>
           <br>
 					<div class="contentBx">
-						<h3>Clone Phishing</h3>
+						<h3>Types of Phishing Scams</h3>
 					</div>
         </div>
-        <a href="clonePhishing.html"> Learn More </a>
+        <a href=""> Learn More </a>
 			</div>
 
       <div class="card">
@@ -130,10 +130,10 @@
 					</div>
           <br>
 					<div class="contentBx">
-						<h3>Pop-up Phishing</h3>
+						<h3>Phishing Awareness Quiz</h3>
 					</div>
         </div>
-        <a href="popupPhishing.html"> Learn More </a>
+        <a href="popupPhishing.html"> Test Your Knowledge </a>
 			</div>
 
       <div class="card">
@@ -144,52 +144,10 @@
 					</div>
           <br>
 					<div class="contentBx">
-						<h3>Search Engine Phishing</h3>
+						<h3>E-mail Fraud Detection</h3>
 					</div>
         </div>
-        <a href="searchEnginePhishing.html"> Learn More </a>
-			</div>
-
-      <div class="card">
-				<div class="content">
-					<div class="imgBx">
-            <!-- Ref: https://www.freepik.com/free-vector/phishing-account-concept_8088554.htm#fromView=search&page=1&position=5&uuid=a6530a06-bff5-44c7-ae7e-2c0adc835ef9 -->
-						<img src="./assets/SMSPhishingSmall.jpg">
-					</div>
-          <br>
-					<div class="contentBx">
-						<h3>Smishing (SMS Phishing)</h3>
-					</div>
-        </div>
-        <a href="smishingPhishing.html"> Learn More </a>
-			</div>
-
-      <div class="card">
-				<div class="content">
-					<div class="imgBx">
-            <!-- Ref: https://www.freepik.com/free-vector/mobile-phishing-landing-page_8247268.htm#fromView=search&page=1&position=0&uuid=b3b894e6-b886-40c1-8440-cc918d0fc6ed -->
-						<img src="./assets/spearPhishingSmall.jpg">
-					</div>
-          <br>
-					<div class="contentBx">
-						<h3>Spear Phishing</h3>
-					</div>
-        </div>
-        <a href="spearPhishing.html"> Learn More </a>
-			</div>
-
-      <div class="card">
-				<div class="content">
-					<div class="imgBx">
-            <!-- Ref: https://www.freepik.com/free-vector/identity-theft-illustration-internet-criminal-victim-cartoon-characters-online-profile-hacking-hacker-holding-magnet-stealing-personal-information-cyber-security-threat_27399142.htm#fromView=search&page=1&position=6&uuid=97c651d4-55b4-40c8-884f-48243636467d -->
-						<img src="./assets/voicePhishingSmall.jpg">
-					</div>
-          <br>
-					<div class="contentBx">
-						<h3>Voice Phishing</h3>
-					</div>
-        </div>
-        <a href="voicePhishing.html"> Learn More </a>
+        <a href="searchEnginePhishing.html"> Find Out How to Spot Email Fraud </a>
 			</div>
 		</div>
   </section>
