--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -28,13 +28,13 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <!-- <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#">
           <img
-            src="resources/logof.jpg"
+            src="../../frontend/resources/logof.jpg"
             alt="Senior Safe Logo"
             class="logo"
           />Senior Safe
-        </a> -->
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -126,5 +126,33 @@
       <p id="predictionResult">Your result will appear here after detection.</p>
       <div class="result" id="result"></div>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer bg-light text-center">
+      <div class="container">
+      <div class="row">
+          <div class="col-md-4">
+          <h5>Contact Us</h5>
+          <p>Email: <a href="mailto:info@seniorsafe.com">info@seniorsafe.com</a></p>
+          <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+          </div>
+          <div class="col-md-4">
+          <h5>Follow Us</h5>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+          <div class="col-md-4">
+          <h5>Quick Links</h5>
+          <ul class="list-unstyled">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
+          </ul>
+          </div>
+      </div>
+      <hr />
+      <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
+      </div>
+  </footer>
   </body>
 </html>
