change the hyperlinks in navbar to the correct ones

--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -49,10 +49,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="../../frontend/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../scrollytelly/data.html"
+              <a class="nav-link" href="../../scrollytelly/data.html"
                 >Trending Scams</a
               >
             </li>
@@ -71,25 +71,25 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a
                   class="dropdown-item"
-                  href="businessEmailCompromisePhishing.html"
+                  href="../../frontend/businessEmailCompromisePhishing.html"
                   >Business Email Compromise Phishing</a
                 >
-                <a class="dropdown-item" href="clonePhishing.html"
+                <a class="dropdown-item" href="../../frontend/clonePhishing.html"
                   >Clone Phishing</a
                 >
-                <a class="dropdown-item" href="popupPhishing.html"
+                <a class="dropdown-item" href="../../frontend/popupPhishing.html"
                   >Pop-up Phishing</a
                 >
-                <a class="dropdown-item" href="searchEnginePhishing.html"
+                <a class="dropdown-item" href="../../frontend/searchEnginePhishing.html"
                   >Search Engine Phishing</a
                 >
-                <a class="dropdown-item" href="smishingPhishing.html"
+                <a class="dropdown-item" href="../../frontend/smishingPhishing.html"
                   >Smishing</a
                 >
-                <a class="dropdown-item" href="spearPhishing.html"
+                <a class="dropdown-item" href="../../frontend/spearPhishing.html"
                   >Spear Phishing</a
                 >
-                <a class="dropdown-item" href="voicePhishing.html"
+                <a class="dropdown-item" href="../../frontend/voicePhishing.html"
                   >Voice Phishing</a
                 >
               </div>
@@ -145,8 +145,8 @@
           <div class="col-md-4">
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
+              <li><a href="../../frontend/index.html">Home</a></li>
+              <li><a href="../../scrollytelly/data.html">Trending Scams</a></li>
           </ul>
           </div>
       </div>
