added email-fraud detection page to the web

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,6 +47,9 @@
           <li class="nav-item">
             <a class="nav-link" href="../scrollytelly/data.html">Trending Scams</a>
           </li>
+          <li class="nav-item"></li>
+            <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Discover
@@ -89,7 +92,7 @@
 
   <!-- Trending Scams Section -->
   <section class="trending-scams-section text-center" id="trending-scams">
-    <h2 class="display-5">Most common types of scams among senior Australians</h2>
+    <h2 class="display-5">Stay Secure: Tools & Resources</h2>
 
     
     <div class="card-container">
@@ -133,7 +136,7 @@
 						<h3>Phishing Awareness Quiz</h3>
 					</div>
         </div>
-        <a href="popupPhishing.html"> Test Your Knowledge </a>
+        <a href=""> Test Your Knowledge </a>
 			</div>
 
       <div class="card">
@@ -147,7 +150,7 @@
 						<h3>E-mail Fraud Detection</h3>
 					</div>
         </div>
-        <a href="searchEnginePhishing.html"> Find Out How to Spot Email Fraud </a>
+        <a href=""> Find Out How to Spot Email Fraud </a>
 			</div>
 		</div>
   </section>
