--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -56,6 +56,9 @@
                 >Trending Scams</a
               >
             </li>
+            <li class="nav-item"></li>
+              <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
+            </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
