--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -52,6 +52,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="../scrollytelly/data.html">Trending Scams</a>
                   </li>
+                  <li class="nav-item"></li>
+                    <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
+                  </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Discover
